[tool.poetry]
name = "edge_sim_py"
version = "1.2.0"
description = "Python-based modeling and simulation framework for Edge Computing resource management policies"
authors = ["Paulo Severo <paulo.severo@edu.pucrs.br>", "Ariel Menezes <arielalmeida@ufba.br>", "Tauane Sales <tauanesales@ufba.br>"]

[tool.poetry.dependencies]
python = "^3.13"
Mesa = "^1.0.0"
networkx = "^3.4.2"
msgpack = "^1.0.4"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
black = "^24.10.0"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
